# Notepad2Dark

./: .gitignore  CMakeLists.txt  Catalogue.cxx  Notepad2.ini
res/: Notepad2.exe.manifest
src/: Helpers.c  Notepad2.c
